Adding Photos to Photography Card

--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
 </head>
 <body class="bg-black">
 <nav class="navbar navbar-light bg-light">
-    <div class="ms-auto me-auto text-center">
-        <h5 class="mb-3"><b>Gael Caraballo</b></h5>
-        <a href="index.html" class="navButtons">Portafolio</a>
-        <a href="about.html" class="navButtons">Sobre mí</a>
-        <a href="contact.html" class="navButtons">Contacto</a>
+    <div class="container-fluid text-center">
+        <div class="row align-items-center justify-content-center  ms-auto me-auto">
+            <h5 class="mb-3"><b>Gael Caraballo</b></h5>
+            <div class="col text-center">
+                <h3 class="mb-3"><a href="index.html" class="navButtons">Portafolio</a></h3>
+            </div>
+            <div class="col text-center">
+                <h3 class="mb-3"><a href="about.html" class="navButtons">Sobre mí</a></h3>
+            </div>
+            <div class="col text-center">
+                <h3 class="mb-3"><a href="contact.html" class="navButtons">Contacto</a></h3>
+            </div>
+        </div>
     </div>
 </nav>
 <div class="container-fluid">
