--- a/contact.html
+++ b/contact.html
@@ -2,30 +2,25 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="public/assets/css/common.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="public/assets/css/common.css" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <title>Gael Caraballo</title>
 </head>
 <body>
-<nav class="navbar navbar-light bg-light">
-    <div class="container-fluid text-center">
-        <div class="row align-items-center justify-content-center  ms-auto me-auto">
-            <h5 class="mb-3"><b>Gael Caraballo</b></h5>
-            <div class="col text-center">
-                <h3 class="mb-3"><a href="index.html" class="navButtons">Portafolio</a></h3>
-            </div>
-            <div class="col text-center">
-                <h3 class="mb-3"><a href="about.html" class="navButtons">Sobre mí</a></h3>
-            </div>
-            <div class="col text-center">
-                <h3 class="mb-3"><a href="contact.html" class="navButtons">Contacto</a></h3>
-            </div>
+<nav class="navbar navbar-light bg-light justify-content-center text-center">
+    <div class="row d-flex">
+        <h5 class="mb-3"><b>Gael Caraballo</b></h5>
+        <div class="col text-center">
+            <h3 class="mb-3"><a class="navButtons" href="index.html">Portafolio</a></h3>
+        </div>
+        <div class="col text-center">
+            <h3 class="mb-3"><a class="navButtons" href="about.html">Sobre mí</a></h3>
+        </div>
+        <div class="col text-center">
+            <h3 class="mb-3"><a href="contact.html" class="navButtons">Contacto</a></h3>
         </div>
     </div>
 </nav>
@@ -33,12 +28,15 @@
     <a href="https://www.instagram.com/caraballolens" target="_blank" class="me-3">
         <i class="bi bi-instagram"></i>
     </a>
-    <a href="https://www.linkedin.com/in/gaelcaraballo/" class="me-3">
+    <a href="https://www.linkedin.com/in/gaelcaraballo/" target="_blank" class="me-3">
         <i class="bi bi-linkedin"></i>
     </a>
-    <a href="mailto:gcaraballofeina@gmail.com">
+    <a href="mailto:gcaraballofeina@gmail.com" target="_blank">
         <i class="bi bi-envelope"></i>
     </a>
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </html>
