--- a/photography.html
+++ b/photography.html
@@ -2,39 +2,35 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="public/assets/css/common.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="public/assets/css/common.css" rel="stylesheet">
+    <link href="public/assets/css/photo.css" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <title>Gael Caraballo</title>
 </head>
 <body>
-<nav class="navbar navbar-light bg-light">
-    <div class="container-fluid text-center">
-        <div class="row align-items-center justify-content-center  ms-auto me-auto">
-            <h5 class="mb-3"><b>Gael Caraballo</b></h5>
-            <div class="col text-center">
-                <h3 class="mb-3"><a href="index.html" class="navButtons">Portafolio</a></h3>
-            </div>
-            <div class="col text-center">
-                <h3 class="mb-3"><a href="about.html" class="navButtons">Sobre mí</a></h3>
-            </div>
-            <div class="col text-center">
-                <h3 class="mb-3"><a href="contact.html" class="navButtons">Contacto</a></h3>
-            </div>
+<nav class="navbar navbar-light bg-light justify-content-center text-center">
+    <div class="row d-flex">
+        <h5 class="mb-3"><b>Gael Caraballo</b></h5>
+        <div class="col text-center">
+            <h3 class="mb-3"><a class="navButtons" href="index.html">Portafolio</a></h3>
+        </div>
+        <div class="col text-center">
+            <h3 class="mb-3"><a class="navButtons" href="about.html">Sobre mí</a></h3>
+        </div>
+        <div class="col text-center">
+            <h3 class="mb-3"><a href="contact.html" class="navButtons">Contacto</a></h3>
         </div>
     </div>
 </nav>
-<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+<div aria-hidden="true" aria-labelledby="imageModalLabel" class="modal fade" id="imageModal" tabindex="-1">
     <div class="modal-dialog modal-md">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="imageModalLabel">Image Preview</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
             </div>
             <div class="modal-body text-center">
                 <img id="previewImage" src="#" alt="Preview" class="img-fluid">
@@ -42,52 +38,81 @@
         </div>
     </div>
 </div>
-
 <div class="container-fluid">
     <div class="row row-cols-1 row-cols-md-4 justify-content-center"> <!-- Center the columns -->
         <!-- Image Cards -->
         <div class="col mt-5">
-            <a href="#" class="text-center" data-bs-toggle="modal" data-bs-target="#imageModal"
+            <a class="text-center" data-bs-target="#imageModal" data-bs-toggle="modal" href="#"
                onclick="showImage('public/assets/photography/IMG_0524.JPG')">
                 <div class="cardHolders">
-                    <img src="public/assets/photography/IMG_0524.JPG" alt="First Card" class="img-fluid"
-                         loading="lazy">
+                    <img alt="First Card" class="img-fluid" loading="lazy" src="public/assets/photography/IMG_0524.JPG">
                 </div>
             </a>
         </div>
         <div class="col mt-5">
-            <a href="#" class="text-center" data-bs-toggle="modal" data-bs-target="#imageModal"
+            <a class="text-center" data-bs-target="#imageModal" data-bs-toggle="modal" href="#"
                onclick="showImage('public/assets/photography/IMG_1098.JPG')">
                 <div class="cardHolders">
-                    <img src="public/assets/photography/IMG_1098.JPG" alt="First Card" class="img-fluid"
-                         loading="lazy">
+                    <img alt="First Card" class="img-fluid" loading="lazy" src="public/assets/photography/IMG_1098.JPG">
                 </div>
             </a>
         </div>
         <div class="col mt-5">
-            <a href="#" class="text-center" data-bs-toggle="modal" data-bs-target="#imageModal"
+            <a class="text-center" data-bs-target="#imageModal" data-bs-toggle="modal" href="#"
                onclick="showImage('public/assets/photography/IMG_5064.PNG')">
                 <div class="cardHolders">
-                    <img src="public/assets/photography/IMG_5064.PNG" alt="First Card" class="img-fluid"
-                         loading="lazy">
+                    <img alt="First Card" class="img-fluid" loading="lazy" src="public/assets/photography/IMG_5064.PNG">
                 </div>
             </a>
         </div>
         <div class="col mt-5">
-            <a href="#" class="text-center" data-bs-toggle="modal" data-bs-target="#imageModal"
+            <a class="text-center" data-bs-target="#imageModal" data-bs-toggle="modal" href="#"
                onclick="showImage('public/assets/photography/IMG_5075.PNG')">
                 <div class="cardHolders">
-                    <img src="public/assets/photography/IMG_5075.PNG" alt="First Card" class="img-fluid"
-                         loading="lazy">
+                    <img alt="First Card" class="img-fluid" loading="lazy" src="public/assets/photography/IMG_5075.PNG">
+                </div>
+            </a>
+        </div>
+        <div class="col mt-5">
+            <a class="text-center" data-bs-target="#imageModal" data-bs-toggle="modal" href="#"
+               onclick="showImage('public/assets/photography/IMG_5386.jpg')">
+                <div class="cardHolders">
+                    <img alt="First Card" class="img-fluid" loading="lazy" src="public/assets/photography/IMG_5386.jpg">
+                </div>
+            </a>
+        </div>
+        <div class="col mt-5">
+            <a class="text-center" data-bs-target="#imageModal" data-bs-toggle="modal" href="#"
+               onclick="showImage('public/assets/photography/IMG_5458.JPG')">
+                <div class="cardHolders">
+                    <img alt="First Card" class="img-fluid" loading="lazy" src="public/assets/photography/IMG_5458.JPG">
+                </div>
+            </a>
+        </div>
+        <div class="col mt-5">
+            <a class="text-center" data-bs-target="#imageModal" data-bs-toggle="modal" href="#"
+               onclick="showImage('public/assets/photography/IMG_5459.JPG')">
+                <div class="cardHolders">
+                    <img alt="First Card" class="img-fluid" loading="lazy" src="public/assets/photography/IMG_5459.JPG">
+                </div>
+            </a>
+        </div>
+        <div class="col mt-5">
+            <a class="text-center" data-bs-target="#imageModal" data-bs-toggle="modal" href="#"
+               onclick="showImage('public/assets/photography/IMG_5460.JPG')">
+                <div class="cardHolders">
+                    <img alt="First Card" class="img-fluid" loading="lazy" src="public/assets/photography/IMG_5460.JPG">
                 </div>
             </a>
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+<script crossorigin="anonymous"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     function showImage(imageSrc) {
         const previewImage = document.getElementById('previewImage');
