Adding designs to design Card

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <div class="col-md-5 col-sm-12 mt-5">
             <a href="#" class="text-center">
                 <div class="cardHolders">
-                    <img src="public/assets/firstCardPortada.png" alt="First Card" class="img-fluid">
+                    <a href="design.html">
+                        <img src="public/assets/firstCardPortada.png" alt="First Card" class="img-fluid">
+                    </a>
                 </div>
             </a>
         </div>
