--- a/about.html
+++ b/about.html
@@ -24,6 +24,16 @@
         </div>
     </div>
 </nav>
+<div class="container mt-5">
+    <p>Mi nombre es Gael Caraballo. Tengo 21 años y soy Desarrollador Web con algo de experiencia en diseño
+        gráfico. Nací en Vic, Barcelona.</p>
+    <p>Siempre he sido un apasionado del deporte, especialmente del fútbol, el cual practiqué en el club de mi pueblo
+        desde que tenía 7 años.</p>
+    <p>A finales de 2022, comencé a estudiar diseño gráfico por cuenta propia y también me introduje en la fotografía
+        de una manera más profesional para el mismo club en el que he jugado toda mi vida, el
+        "<a href="https://www.instagram.com/atleticbalenya" target="_blank">Club Atlètic Balenyà</a>". Desde
+        entonces, trabajo como Community Manager y Diseñador Gráfico para el mismo club.</p>
+</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
