--- a/contact.html
+++ b/contact.html
@@ -24,16 +24,19 @@
         </div>
     </div>
 </nav>
-<div class="d-flex mt-3">
-    <a href="https://www.instagram.com/caraballolens" target="_blank" class="me-3">
-        <i class="bi bi-instagram"></i>
-    </a>
-    <a href="https://www.linkedin.com/in/gaelcaraballo/" target="_blank" class="me-3">
-        <i class="bi bi-linkedin"></i>
-    </a>
-    <a href="mailto:gcaraballofeina@gmail.com" target="_blank">
-        <i class="bi bi-envelope"></i>
-    </a>
+<div class="d-flex justify-content-center align-items-center flex-column mt-3">
+    <h5 class="mb-2"><b>Email: </b>gcaraballofeina@gmail.com</h5>
+    <div class="d-flex">
+        <a href="https://www.instagram.com/caraballolens" target="_blank" class="me-3">
+            <i class="bi bi-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/gaelcaraballo/" target="_blank" class="me-3">
+            <i class="bi bi-linkedin"></i>
+        </a>
+        <a href="mailto:gcaraballofeina@gmail.com" target="_blank">
+            <i class="bi bi-envelope"></i>
+        </a>
+    </div>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
